fix bitbucket pipeline config